maintenance: commercial demand generation (#5045)
* change non-final static variables to instance fields

* more commercial demand gen maintenance

* comments and renames around commercial traffic

* Update BicycleParamsDefaultImpl.java -- infrastructure factor for highway cycleway (#4996)

Hey hey, I believe that that the tag highway=cycleway is actually not usually used together with the cycleway tag, since the cycleway tag specifies a cycle path that is part of a road, whereas highway=cycleway means that it is already a completely separate cycle path. https://wiki.openstreetmap.org/wiki/Tag:highway%3Dcycleway

Hence, highway=cycleway will fall into the hasNoCycleway if branch and will be assigned 0.95 by default, while it should have the best possible infrastructure factor of 1. 

In my network (Brussels), I only ever saw type=cycleway and cycleway not being set or type=anything else and cycleway being set.

* feat: parsing cycleway tags with side attributes in OsmBicycleReader (#4999)

* Added cycleway:* tags to OsmTags.java

* Update OsmBicycleReader.java to parse directional cycleway tag

* feat(scoringVSP): Introduce vehicle type based scoring for Commercial Agents (#5048)

* rename method

* move classes to vsp contrib

* fix input

* move to vsp contrib

* add new activity scoring for commercial activities

* fix units

* clean up

* Add scoring mode params compatibility accessor

* Revert "Add scoring mode params compatibility accessor"

This reverts commit 97f95724636cf723bf42dced4152d0affca617b0.

* fix call of getModes()

* Test vehicle type based leg scoring

* Store vehicle type scoring params in scoring config

* rename

* add scoring params by vehicleType

* feat: add transfer wait time skim (#5043)

* build(deps): bump the bag-of-cats group across 1 directory with 7 updates (#5049)

Bumps the bag-of-cats group with 7 updates in the / directory:

| Package | From | To |
| --- | --- | --- |
| [com.fasterxml.jackson:jackson-bom](https://github.com