@@ -36,10 +36,8 @@ import org.matsim.api.core.v01.Id;
 import org.matsim.api.core.v01.Scenario;
 import org.matsim.api.core.v01.network.Link;
 import org.matsim.api.core.v01.network.Network;
-import org.matsim.api.core.v01.population.Activity;
 import org.matsim.application.MATSimAppCommand;
 import org.matsim.application.options.ShpOptions.Index;
-import org.matsim.contrib.roadpricing.*;
 import org.matsim.contrib.common.conventions.vsp.SubpopulationDefaultNames;
 import org.matsim.core.config.Config;
 import org.matsim.core.config.ConfigUtils;
@@ -50,9 +48,6 @@ import org.matsim.core.network.NetworkUtils;
 import org.matsim.core.network.algorithms.NetworkTransform;
 import org.matsim.core.network.algorithms.TransportModeNetworkFilter;
 import org.matsim.core.network.io.MatsimNetworkReader;
-import org.matsim.core.population.PopulationUtils;
-import org.matsim.core.replanning.strategies.DefaultPlanStrategiesModule;
-import org.matsim.core.router.TripStructureUtils;
 import org.matsim.core.scenario.ProjectionUtils;
 import org.matsim.core.scenario.ScenarioUtils;
 import org.matsim.core.utils.geometry.CoordinateTransformation;
@@ -61,13 +56,9 @@ import org.matsim.core.utils.misc.Counter;
 import org.matsim.facilities.ActivityFacility;
 import org.matsim.freight.carriers.*;
 import org.matsim.freight.carriers.analysis.CarriersAnalysis;
-import org.matsim.simwrapper.SimWrapper;
-import org.matsim.simwrapper.SimWrapperConfigGroup;
-import org.matsim.simwrapper.SimWrapperModule;
-import org.matsim.simwrapper.dashboard.*;
 import org.matsim.smallScaleCommercialTrafficGeneration.data.CommercialTourSpecifications;
 import org.matsim.smallScaleCommercialTrafficGeneration.data.DefaultTourSpecificationsByUsingKID2002;
-import org.matsim.smallScaleCommercialTrafficGeneration.SmallScaleCommercialTrafficUtils.StructuralAttribute;
+import org.matsim.smallScaleCommercialTrafficGeneration.SmallScaleCommercialTrafficUtils.ZoneAttribute;
 
 import org.matsim.vehicles.CostInformation;
 import org.matsim.vehicles.Vehicle;
@@ -84,7 +75,12 @@ import java.time.LocalTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
-import static org.matsim.smallScaleCommercialTrafficGeneration.SmallScaleCommercialTrafficUtils.readDataDistribution;
+import static org.matsim.smallScaleCommercialTrafficGeneration.GenerateSmallScaleCommercialTrafficDemand.SmallScaleCommercialTrafficSegment.*;
+import static org.matsim.smallScaleCommercialTrafficGeneration.SmallScaleCommercialTrafficUtils.PURPOSE;
+import static org.matsim.smallScaleCommercialTrafficGeneration.SmallScaleCommercialTrafficUtils.SUBPOPULATION;
+import static org.matsim.smallScaleCommercialTrafficGeneration.SmallScaleCommercialTrafficUtils.TOUR_START_AREA;
+import static org.matsim.smallScaleCommercialTrafficGeneration.SmallScaleCommercialTrafficUtils.readZoneAttributes;
+import static org.matsim.smallScaleCommercialTrafficGeneration.TrafficVolumesGenerator.*;
 
 /**
  * Tool to generate small scale commercial traffic for a selected area. The needed input data are: employee information for the area and three shapes files (zones, buildings, landuse). These data should be available with OSM.
@@ -93,6 +89,14 @@ import static org.matsim.smallScaleCommercialTrafficGeneration.SmallScaleCommerc
  */
 @CommandLine.Command(name = "generate-small-scale-commercial-traffic", description = "Generates plans for a small scale commercial traffic model", showDefaultValues = true)
 public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppCommand {
+	// (needs to be public: a few things are used in ./data/...)
+
+	// yyyy this class is attaching "runJspritOptimization" and "runMATSimIterations" at its end.  Seen from a Makefile
+	// perspective, these should not be included here, but called separately from the command line.  If the developer wants to
+	// run several of these in a pipeline, and do that from Java rather than from Makefile, he or she should write an
+	// orchestration class in Java and call all of these from there.  kai, jul'26
+
+
 	// freight traffic from extern:
 
 	// Option 1: take "as is" from Chengqi code.
@@ -112,132 +116,202 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 	protected final OdMatrixEntryInformationProvider odMatrixEntryInformationProvider;
 	private final UnhandledServicesSolution unhandledServicesSolution;
 
+	MATSimIterations matsimIterations;
+	JspritOptimization jspritOptimization;
+	// (I need these here for refactoring; maybe can become more local afterwards. kai, jul'26)
+
 	private enum CreationOption {
 		useExistingCarrierFileWithSolution, createNewCarrierFile, useExistingCarrierFileWithoutSolution
+		// read this as "use existing carrier file and use the existing solutions in it" and as "use existing carrier file but not the solutions in it"
 	}
 
-	public enum SmallScaleCommercialTrafficType {
+	public enum SmallScaleCommercialTrafficSegment{
 		commercialPersonTraffic, goodsTraffic, completeSmallScaleCommercialTraffic
 	}
 
+	// === cmd line params after here
+
 	@CommandLine.Parameters(arity = "1", paramLabel = "INPUT", description = "Path to the config for small scale commercial generation")
 	private Path configPath;
+	// ok
 
-	@CommandLine.Option(names = "--pathToDataDistributionToZones", description = "Path to the data distribution to zones")
-	private Path pathToDataDistributionToZones;
+	private Path pathToZoneAttributes;
+	// command line string replaced 2026-07
+	@CommandLine.Option(names = "--pathToZoneAttributes", description = "Path to the zone attributes")
+	void setPathToZoneAttributes( String value ) {
+		this.pathToZoneAttributes = Path.of( value );
+	}
+	@CommandLine.Option(names = "--pathToDataDistributionToZones", description = "Path to the data distribution to zones", hidden=true )
+	void setOldPathToZoneAttributes( String value ) {
+		log.error( "--pathToDataDistributionToZones is deprecated since 2026-07; use --pathToZoneAttributes instead.");
+		this.pathToZoneAttributes = Path.of( value );
+	}
+	// Dies zeigt auf die Datei, welche die Strukturdaten pro Zone enthält, welche dann mit den IVV magic numbers multipliziert
+	// werden.  Strukturdaten \ne structure data im engl., eher so etwas wie "zone attributes".
+	// now ok
 
 	@CommandLine.Option(names = "--pathToCommercialFacilities", description = "Path to the commercial facilities.")
 	private Path pathToCommercialFacilities;
+	// ok
 
 	@CommandLine.Option(names = "--carrierFilePath", description = "Path to the carrier file.")
 	private Path carrierFilePath;
+	// ok
 
 	@CommandLine.Option(names = "--sample", description = "Scaling factor of the small scale commercial traffic (0, 1)", required = true)
 	private double sample;
+	// ok
 
 	@CommandLine.Option(names = "--jspritIterations", description = "Set number of jsprit iterations", required = true)
-	private int jspritIterations;
+	private int nJspritIterations;
+	// ok
 
-	@CommandLine.Option(names = {"--additionalTravelBufferPerIterationInMinutes", "--additionalTravelBufferPerTourAndIterationInMinutes"}, description = "Additional travel buffer in minutes per scheduled tour and carrier-replanning iteration. Used while resolving carriers with unhandled services; if set too low, carriers may not serve all services.", defaultValue = "30")
+	@CommandLine.Option(names = {"--additionalTravelBufferPerIterationInMinutes", "--additionalTravelBufferPerTourAndIterationInMinutes"}, defaultValue = "30",
+		description = "Additional travel buffer in minutes per scheduled tour and carrier-replanning iteration. Used while resolving carriers with unhandled services; if set too low, carriers may not serve all services.")
 	private int additionalTravelBufferPerTourAndIterationInMinutes;
+	// This has to do with the issue that the vehicle fleets are given a priori, since they need to match some externally given
+	// data.  With that, it may happen that not all services fit in.  In order to counter that, the tours (= driver workhours)
+	// are made longer and longer until it fits.
 
-	@CommandLine.Option(names = "--maxNumberOfLoopsForVRPSolving", description = "Limit of carrier replanning iterations, where carriers with unhandled services get new plans. If your carrier-plans are still not fully served, increase this limit.", defaultValue = "100")
+	@CommandLine.Option(names = "--maxNumberOfLoopsForVRPSolving", defaultValue = "100",
+		description = "Limit of carrier replanning iterations, where carriers with unhandled services get new plans. If your carrier-plans are still not fully served, increase this limit.")
 	private int maxNumberOfLoopsForVRPSolving;
+	/// see {@link #additionalTravelBufferPerTourAndIterationInMinutes}
 
 	@CommandLine.Option(names = "--creationOption", description = "Set option of mode differentiation:  useExistingCarrierFileWithSolution, createNewCarrierFile, useExistingCarrierFileWithoutSolution")
-	private CreationOption usedCreationOption;
+	private CreationOption carriersFileCreationOption;
+	/// see comments at {@link CreationOption}
 
 	@CommandLine.Option(names = "--smallScaleCommercialTrafficType", description = "Select traffic type. Options: commercialPersonTraffic, goodsTraffic, completeSmallScaleCommercialTraffic (contains both types)")
-	private SmallScaleCommercialTrafficType usedSmallScaleCommercialTrafficType;
+	private SmallScaleCommercialTrafficSegment usedSmallScaleCommercialTrafficSegment;
+	// generate only one segment or the other, or both.
 
 	@CommandLine.Option(names = "--includeExistingModels", description = "If models for some segments exist they can be included.")
 	private boolean includeExistingModels;
+	// yyyy not sure what this means.  A "model" is a specification of a functionality.  Maybe this rather means "model output"?
 
 	@CommandLine.Option(names = "--zoneShapeFileName", description = "Path of the zone shape file.")
 	private Path shapeFileZonePath;
+	// ok
 
 	@CommandLine.Option(names = "--zoneShapeFileNameColumn", description = "Name of the unique column of the name/Id of each zone in the zones shape file.")
 	private String shapeFileZoneNameColumn;
+	// ok
 
 	@CommandLine.Option(names = "--shapeCRS", description = "CRS of the three input shape files (zones, landuse, buildings")
 	private String shapeCRS;
+	// ok
 
 	@CommandLine.Option(names = "--resistanceFactor_commercialPersonTraffic", description = "ResistanceFactor for the trip distribution")
 	private double resistanceFactor_commercialPersonTraffic;
+	// ok (albeit difficult w/o default)
 
 	@CommandLine.Option(names = "--resistanceFactor_goodsTraffic", description = "ResistanceFactor for the trip distribution")
 	private double resistanceFactor_goodsTraffic;
+	// ok (albeit difficult w/o default)
 
 	@CommandLine.Option(names = "--nameOutputPopulation", description = "Name of the output Population")
 	private String nameOutputPopulation;
+	// ok
 
 	@CommandLine.Option(names = "--numberOfPlanVariantsPerAgent", description = "If an agent should have variant plans, you should set this parameter.", defaultValue = "1")
 	private int numberOfPlanVariantsPerAgent;
+	/// This has to do with {@link CreateDifferentPlansForFreightPopulation}. See comments there.
 
 	@CommandLine.Option(names = "--network", description = "Overwrite network file in config")
 	private String network;
+	// ok
+	// yy since one reads a config, this here is not needed: can be set via --config:.... syntax
 
 	@CommandLine.Option(names = "--pathOutput", description = "Path for the output")
 	private Path output;
+	// ok
+	// yy since one reads a config, this here is not needed: can be set via --config:.... syntax
 
-	@CommandLine.Option(names = "--MATSimIterationsAfterDemandGeneration", description = "If selected, the MATSim simulation will be run for the selected number of iterations after demand generation. if not selected, only demand generation is performed.")
-	private Integer MATSimIterationsAfterDemandGeneration;
-
-	@CommandLine.Option(names = "--factorForTravelBufferCalculation", description = "Factor applied to the total service duration when estimating the required total tour duration for initial vehicle creation. Values above 1.0 reserve additional time for travel between services", defaultValue = "1.2")
+	@CommandLine.Option(names = "--factorForTravelBufferCalculation", defaultValue = "1.2",
+		description = "Factor applied to the total service duration when estimating the required total tour duration for initial vehicle creation. Values above 1.0 reserve additional time for travel between services")
 	private double factorForTravelBufferCalculation;
 
-	@CommandLine.Option(names = "--useRangeConstraintForTourPlanning", description = "Option to use range constraint for planning the tours. If this is selected, the range is restricted based on consumption information in the vehicle types file.")
-	private boolean useRangeConstraintForTourPlanning;
-
-	@CommandLine.Option(names = "--distanceConstraintUsableRange", description = "Usable range in percent of the energy capacity applied to the vehicle range during tour planning. For example, a value of 80 limits the usable range to 80 percent. This option is only applied if --useRangeConstraintForTourPlanning is selected.", defaultValue = "100")
-	private double distanceConstraintUsableRange;
 
 	@CommandLine.Option(names = "--createSmallScaleCommercialCarrierFileOnly", description = "Create the unsolved small scale commercial carrier file and stop before tour planning.")
 	private boolean createSmallScaleCommercialCarrierFileOnly;
+	// ok (means, I think: "stopBeforeJsprit").  The jsprit-related code now is in a different file/class.
+	// yyyy as far as I can tell, this option is not honoured when using one of the two "useExistingCarrier..." options.
 
-	@CommandLine.Option(names = "--smallScaleCommercialCarrierPartCount", defaultValue = "1", description = "Number of independent carrier parts for small scale commercial tour planning. Use with --smallScaleCommercialCarrierPartIndex.")
+	// ### only matsim- and jsprit-related params below
+
+	@CommandLine.Option(names = "--useRangeConstraintForTourPlanning",
+		description = "Option to use range constraint for planning the tours. If this is selected, the range is restricted based on consumption information in the vehicle types file.")
+	private boolean useRangeConstraintForTourPlanning;
+	// I think that this is a jsprit option.
+	// yy since one reads a config, this here is not needed
+
+	@CommandLine.Option(names = "--distanceConstraintUsableRange",
+		description = "Usable range in percent of the energy capacity applied to the vehicle range during tour planning. For example, a value of 80 limits the usable range to 80 percent. This option is only applied if --useRangeConstraintForTourPlanning is selected.", defaultValue = "100")
+	private double distanceConstraintUsableRange;
+	// I think that this is a jsprit option
+	// yy since one reads a config, this here is not needed: can be set via --config:freight.... syntax
+
+	@CommandLine.Option(names = "--smallScaleCommercialCarrierPartCount", defaultValue = "1",
+		description = "Number of independent carrier parts for small scale commercial tour planning. Use with --smallScaleCommercialCarrierPartIndex.")
 	private int smallScaleCommercialCarrierPartCount;
+	// this solves the problem in "chunks"  (maybe "chunk" would also be a better term instead of "part"); parameter tells how many chunks.  I think that this functionality only concerns jsprit
 
 	@CommandLine.Option(names = "--smallScaleCommercialCarrierPartIndex", defaultValue = "0", description = "Zero-based index of the independent carrier part to solve.")
 	private int smallScaleCommercialCarrierPartIndex;
+	// once the problem is solved in chunks (see above), this tells which chunk to solve with this call here.
 
 	@CommandLine.Option(names = "--mergeSmallScaleCommercialCarrierParts", description = "Merge independently solved small scale commercial carrier parts and create the population from the merged solution.")
 	private boolean mergeSmallScaleCommercialCarrierParts;
+	// if one replaces "parts" by "chunks" it becomes clear
 
 	@CommandLine.Option(names = "--smallScaleCommercialCarrierPartsFolder", description = "Folder containing the solved small scale commercial carrier part folders. Defaults to <pathOutput>/carrierParts.")
 	private Path smallScaleCommercialCarrierPartsFolder;
+	// if one replaces "parts" by "chunks" it becomes clear
+
+	// ### only matsim-related params below
+
+	@CommandLine.Option(names = "--MATSimIterationsAfterDemandGeneration",
+		description = "If selected, the MATSim simulation will be run for the selected number of iterations after demand generation. if not selected, only demand generation is performed.")
+	private Integer MATSimIterationsAfterDemandGeneration;
+	// ok.  The matsim-related code should go to a different file/class.
+	// yyyy since one reads a config, this here is not needed: can be set via --config:.... syntax
 
 	private Random rnd;
 	private RandomGenerator rng;
-	private final Map<String, Map<StructuralAttribute, EnumeratedDistribution<ActivityFacility>>> facilitiesPerZoneWithProbabilities = new HashMap<>();
-	private final Map<Id<Carrier>, CarrierAttributes> carrierId2carrierAttributes = new HashMap<>();
-	private final Map<SmallScaleCommercialTrafficType, Double> resistanceFactorsPerModelType = new HashMap<>();
+	// ??
 
-	private Map<SmallScaleCommercialTrafficType, EnumeratedDistribution<TourStartAndDuration>> tourDistribution = null;
+	private final Map<String, Map<ZoneAttribute, EnumeratedDistribution<ActivityFacility>>> facilitiesPerZoneWithProbabilities = new HashMap<>();
+	private final Map<Id<Carrier>, CarrierAttributes> carrierId2carrierAttributes = new HashMap<>();
+	private final Map<SmallScaleCommercialTrafficSegment, Double> resistanceFactorsPerModelType = new HashMap<>();
+
+	private Map<SmallScaleCommercialTrafficSegment, EnumeratedDistribution<TourStartAndDuration>> tourDistribution = null;
 	private Map<ServiceDurationPerCategoryKey, EnumeratedDistribution<DurationsBounds>> serviceDurationTimeSelector = null;
 
 	private TripDistributionMatrix odMatrix;
-	private Map<String, Object2DoubleMap<StructuralAttribute>> resultingDataPerZone;
+	private Map<String, Object2DoubleMap<ZoneAttribute>> attributesByZone;
 	private Map<String, Map<Id<Link>, Link>> linksPerZone;
 
 	private Index indexZones;
 
 	private final String[] configArgs;
 
-	public GenerateSmallScaleCommercialTrafficDemand() {
+	// yy if this class is meant to be used directly, the constructors below should be replaced by a builder
+
+	GenerateSmallScaleCommercialTrafficDemand() {
 		this(null, null, null, null, null, null);
 	}
 
-	public GenerateSmallScaleCommercialTrafficDemand(String[] configArgs) {
+	GenerateSmallScaleCommercialTrafficDemand(String[] configArgs) {
 		this(configArgs, null, null, null, null, null);
 	}
 
-	public GenerateSmallScaleCommercialTrafficDemand(IntegrateExistingTrafficToSmallScaleCommercial integrateExistingTrafficToSmallScaleCommercial,
+	GenerateSmallScaleCommercialTrafficDemand(IntegrateExistingTrafficToSmallScaleCommercial integrateExistingTrafficToSmallScaleCommercial,
 	                                                 CommercialTourSpecifications commercialTourSpecifications, OdMatrixEntryInformationProvider odMatrixEntryInformationProvider,
 	                                                 VehicleTypeSelection vehicleTypeSelection, UnhandledServicesSolution unhandledServicesSolution) {
 		this(null, integrateExistingTrafficToSmallScaleCommercial, commercialTourSpecifications, odMatrixEntryInformationProvider, vehicleTypeSelection, unhandledServicesSolution);
 	}
-	public GenerateSmallScaleCommercialTrafficDemand(String[] configArgs,
+	GenerateSmallScaleCommercialTrafficDemand(String[] configArgs,
 	                                                 IntegrateExistingTrafficToSmallScaleCommercial integrateExistingTrafficToSmallScaleCommercial,
 	                                                 CommercialTourSpecifications commercialTourSpecifications, OdMatrixEntryInformationProvider odMatrixEntryInformationProvider,
 	                                                 VehicleTypeSelection vehicleTypeSelection, UnhandledServicesSolution unhandledServicesSolution) {
@@ -294,7 +368,7 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 		String sampleName = SmallScaleCommercialTrafficUtils.getSampleNameOfOutputFolder(sample);
 
 		/*
-		 * A carrier part run needs two different output concepts:
+		 * A carrier part ("chunk") run needs two different output concepts:
 		 * - finalOutput points to the shared traffic output folder created by the init step. The shared unsolved carrier
 		 *   file is read from there, and the merge step later writes the complete result there.
 		 * - configOutput points to the isolated part folder. It must be set before readAndCheckConfig initializes the
@@ -307,7 +381,7 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 			: requestedOutput;
 		Config config = readAndCheckConfig(configArgs, configPath, modelName, sampleName, configOutput);
 		//This is needed because the plans don't contain access/egress legs. The test would otherwise fail. Not really sure if this is even need for commerical traffic. paul, jul'26
-		config.routing().setAccessEgressConsistencyCheck(RoutingConfigGroup.AccessEgressConsistencyCheck.disable);
+		config.routing().setAccessEgressConsistencyCheck( RoutingConfigGroup.AccessEgressConsistencyCheck.disable );
 
 		output = Path.of(config.controller().getOutputDirectory());
 		Path finalOutput = isSolvingOnlyCarrierPart() && requestedOutput != null ? requestedOutput : output;
@@ -317,89 +391,99 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 			mergeSmallScaleCommercialCarrierParts(config, finalOutput);
 			scenario = SmallScaleCommercialTrafficUtils.loadScenarioWithCarrierFile(config,
 				finalOutput.resolve(SmallScaleCommercialTrafficUtils.getRunIdPrefixedFileName(config, SOLVED_CARRIER_FILE)), CARRIER_VEHICLE_TYPES_FILE);
+			// (I think that this execution path just merges already existing parts (chunks).)
 		} else {
 			if (isSolvingOnlyCarrierPart()) {
-				if (usedCreationOption == CreationOption.createNewCarrierFile) {
+				if ( carriersFileCreationOption == CreationOption.createNewCarrierFile) {
 					Path sharedCarrierFile = finalOutput.resolve(SmallScaleCommercialTrafficUtils.getRunIdPrefixedFileName(config, UNSOLVED_CARRIER_FILE));
 					if (!Files.exists(sharedCarrierFile)) {
 						throw new IllegalStateException("Missing shared small scale commercial carrier file without solution: " + sharedCarrierFile
 							+ ". Run with --createSmallScaleCommercialCarrierFileOnly before starting carrier part jobs.");
 					}
 					carrierFilePath = sharedCarrierFile;
-					usedCreationOption = CreationOption.useExistingCarrierFileWithoutSolution;
+					carriersFileCreationOption = CreationOption.useExistingCarrierFileWithoutSolution;
 				}
 			}
 
 			scenario = ScenarioUtils.loadScenario(config);
 
-			resultingDataPerZone = readDataDistribution(pathToDataDistributionToZones);
+			attributesByZone = readZoneAttributes( pathToZoneAttributes );
 			serviceDurationTimeSelector = commercialTourSpecifications.createStopDurationDistributionPerCategory(rng);
 			tourDistribution = commercialTourSpecifications.createTourDistribution(rng);
 
-			if ((usedSmallScaleCommercialTrafficType == SmallScaleCommercialTrafficType.commercialPersonTraffic || usedSmallScaleCommercialTrafficType == SmallScaleCommercialTrafficType.completeSmallScaleCommercialTraffic) && resistanceFactor_commercialPersonTraffic == 0.)
-				throw new Exception("You selected commercialPersonTraffic but did not set a resistanceFactor_commercialPersonTraffic. Please set it.");
-			if ((usedSmallScaleCommercialTrafficType == SmallScaleCommercialTrafficType.goodsTraffic || usedSmallScaleCommercialTrafficType == SmallScaleCommercialTrafficType.completeSmallScaleCommercialTraffic) && resistanceFactor_goodsTraffic == 0.)
-				throw new Exception("You selected goodsTraffic but did not set a resistanceFactor_goodsTraffic > 0. Please set it.");
+			if ((usedSmallScaleCommercialTrafficSegment == commercialPersonTraffic || usedSmallScaleCommercialTrafficSegment == completeSmallScaleCommercialTraffic) && resistanceFactor_commercialPersonTraffic == 0.){
+				throw new Exception( "You selected commercialPersonTraffic but did not set a resistanceFactor_commercialPersonTraffic. Please set it." );
+			}
+			if ((usedSmallScaleCommercialTrafficSegment == goodsTraffic || usedSmallScaleCommercialTrafficSegment == completeSmallScaleCommercialTraffic) && resistanceFactor_goodsTraffic == 0.){
+				throw new Exception( "You selected goodsTraffic but did not set a resistanceFactor_goodsTraffic > 0. Please set it." );
+			}
 
-			resistanceFactorsPerModelType.put(SmallScaleCommercialTrafficType.commercialPersonTraffic, resistanceFactor_commercialPersonTraffic);
-			resistanceFactorsPerModelType.put(SmallScaleCommercialTrafficType.goodsTraffic, resistanceFactor_goodsTraffic);
+			resistanceFactorsPerModelType.put( commercialPersonTraffic, resistanceFactor_commercialPersonTraffic );
+			resistanceFactorsPerModelType.put( goodsTraffic, resistanceFactor_goodsTraffic );
 			log.info("Set resistance factor for commercialPersonTraffic to {} and for goodsTraffic to {}.", resistanceFactor_commercialPersonTraffic, resistanceFactor_goodsTraffic);
 
-			switch (usedCreationOption) {
+			switch ( carriersFileCreationOption ) {
 				case useExistingCarrierFileWithSolution, useExistingCarrierFileWithoutSolution -> {
+					// as stated elsewhere, this should be read as "use...Solution" and "use...ButNotTheSolution"
+
+					// (I _think_ that "existingCarrierFile" means that carriers plus demand are already there, and the KWM does not have to be run.  So the following only starts jsprit.)
+
 					log.info("Existing carriers (including carrier vehicle types) should be set in the freight config group");
-					if (includeExistingModels)
-						throw new Exception(
-							"You set that existing models should included to the new model. This is only possible for a creation of the new carrier file and not by using an existing.");
+					if (includeExistingModels){
+						throw new Exception( "You set that existing models should included to the new model. This is only possible for a creation of the new carrier file and not by using an existing." );
+					}
 					FreightCarriersConfigGroup freightCarriersConfigGroup = ConfigUtils.addOrGetModule(config, FreightCarriersConfigGroup.class);
 
-					if (freightCarriersConfigGroup.getCarriersFile() == null)
-						freightCarriersConfigGroup.setCarriersFile(carrierFilePath.toAbsolutePath().toString());
+					if (freightCarriersConfigGroup.getCarriersFile() == null){
+						freightCarriersConfigGroup.setCarriersFile( carrierFilePath.toAbsolutePath().toString() );
+					}
 					Path carrierVehicleTypesFile = SmallScaleCommercialTrafficUtils.resolveCarrierVehicleTypesFile(config, carrierFilePath, CARRIER_VEHICLE_TYPES_FILE);
-					if (carrierVehicleTypesFile != null)
-						freightCarriersConfigGroup.setCarriersVehicleTypesFile(carrierVehicleTypesFile.toAbsolutePath().toString());
-					else if (config.vehicles() != null && freightCarriersConfigGroup.getCarriersVehicleTypesFile() == null)
+					if (carrierVehicleTypesFile != null){
+						freightCarriersConfigGroup.setCarriersVehicleTypesFile( carrierVehicleTypesFile.toAbsolutePath().toString() );
+					} else if (config.vehicles() != null && freightCarriersConfigGroup.getCarriersVehicleTypesFile() == null) {
 						freightCarriersConfigGroup.setCarriersVehicleTypesFile(config.vehicles().getVehiclesFile());
+					}
 					log.info("Load carriers from: {}", freightCarriersConfigGroup.getCarriersFile());
 					CarriersUtils.loadCarriersAccordingToFreightConfig(scenario);
 
-				// Remove vehicle types which are not used by the carriers
-				Map<Id<VehicleType>, VehicleType> readVehicleTypes = CarriersUtils.getOrAddCarrierVehicleTypes(scenario).getVehicleTypes();
-				List<Id<VehicleType>> usedCarrierVehicleTypes = CarriersUtils.getCarriers(scenario).getCarriers().values().stream()
-					.flatMap(carrier -> carrier.getCarrierCapabilities().getCarrierVehicles().values().stream())
-					.map(vehicle -> vehicle.getType().getId())
-					.distinct()
-					.toList();
+					// Remove vehicle types which are not used by the carriers
+					Map<Id<VehicleType>, VehicleType> readVehicleTypes = CarriersUtils.getOrAddCarrierVehicleTypes(scenario).getVehicleTypes();
+					List<Id<VehicleType>> usedCarrierVehicleTypes = CarriersUtils.getCarriers(scenario).getCarriers().values().stream()
+					                                                             .flatMap(carrier -> carrier.getCarrierCapabilities().getCarrierVehicles().values().stream())
+					                                                             .map(vehicle -> vehicle.getType().getId())
+					                                                             .distinct()
+					                                                             .toList();
 
-				readVehicleTypes.keySet().removeIf(vehicleType -> !usedCarrierVehicleTypes.contains(vehicleType));
+					readVehicleTypes.keySet().removeIf(vehicleType -> !usedCarrierVehicleTypes.contains(vehicleType));
 
-				// if we do solving of unhandled jobs, these steps are necessary to prepare the solving.
-				if (maxNumberOfLoopsForVRPSolving > 0) {
-					if (!Files.exists(shapeFileZonePath)) {
-						throw new Exception("Required districts shape file {} not found" + shapeFileZonePath.toString());
+					// if we do solving of unhandled jobs, these steps are necessary to prepare the solving.
+					if (maxNumberOfLoopsForVRPSolving > 0) {
+						if (!Files.exists(shapeFileZonePath)) {
+							throw new Exception("Required districts shape file {} not found" + shapeFileZonePath.toString());
+						}
+						indexZones = SmallScaleCommercialTrafficUtils.getIndexZones(shapeFileZonePath, shapeCRS, shapeFileZoneNameColumn);
+						filterFacilitiesForZones(scenario);
+						linksPerZone = filterLinksForZones(scenario, this.indexZones, facilitiesPerZoneWithProbabilities, shapeFileZoneNameColumn);
 					}
-					indexZones = SmallScaleCommercialTrafficUtils.getIndexZones(shapeFileZonePath, shapeCRS, shapeFileZoneNameColumn);
-					filterFacilitiesForZones(scenario);
-					linksPerZone = filterLinksForZones(scenario, this.indexZones, facilitiesPerZoneWithProbabilities, shapeFileZoneNameColumn);
-				}
-				if (Objects.requireNonNull(usedCreationOption) == CreationOption.useExistingCarrierFileWithoutSolution) {
-					CarriersUtils.getCarriers(scenario).getCarriers().values().forEach(CarriersUtils::clearCarrierPlans);
-				} else {
-					// if we use an existing carrier with a solution, we delete only the plans of carriers which have unhandled jobs.
-					List<Carrier> nonCompleteSolvedCarriers = CarriersUtils.createListOfCarrierWithUnhandledJobs(
-						CarriersUtils.getCarriers(scenario));
-					if (!nonCompleteSolvedCarriers.isEmpty()) {
-						log.info(
-							"By using the option {} {} carriers of all {} carriers are found with unhandled jobs. These carriers will be solved and the plans of the fully planed carriers will remain. ",
-							CreationOption.useExistingCarrierFileWithSolution, nonCompleteSolvedCarriers.size(), CarriersUtils.getCarriers(scenario).getCarriers().size());
-						nonCompleteSolvedCarriers.forEach((CarriersUtils::clearCarrierPlans));
+					if ( carriersFileCreationOption == CreationOption.useExistingCarrierFileWithoutSolution) {
+						// --> the way in which this needs to be read is "use existing carrier file but do not use the solution"
+						CarriersUtils.getCarriers(scenario).getCarriers().values().forEach(CarriersUtils::clearCarrierPlans);
+					} else {
+						// if we use an existing carrier with a solution, we delete only the plans of carriers which have unhandled jobs.
+						List<Carrier> nonCompleteSolvedCarriers = CarriersUtils.createListOfCarrierWithUnhandledJobs( CarriersUtils.getCarriers(scenario));
+						if (!nonCompleteSolvedCarriers.isEmpty()) {
+							log.info( "By using the option {} {} carriers of all {} carriers are found with unhandled jobs. These carriers will be solved while the plans of the fully planed carriers will remain. ",
+								CreationOption.useExistingCarrierFileWithSolution, nonCompleteSolvedCarriers.size(), CarriersUtils.getCarriers(scenario).getCarriers().size());
+							nonCompleteSolvedCarriers.forEach((CarriersUtils::clearCarrierPlans));
+						}
 					}
-				}
-				filterCarriersForSelectedPart(scenario);
-				ensureJspritIterationsForCarriersToSolve(scenario);
-				// for the case @useExistingCarrierFileWithSolution the method solveSeparatedVRPs skips carriers with existing plans. But if a carrier without plans exists, it will be solved.
-				CarriersUtils.writeCarriers(scenario, UNSOLVED_CARRIER_FILE);
-				solveVRP(scenario);
+					// there are lines below which are similar but not the same
+					filterCarriersForSelectedPart(scenario);
+					ensureJspritIterationsForCarriersToSolve(scenario);
+					// for the case @useExistingCarrierFileWithSolution the method solveSeparatedVRPs skips carriers with existing plans. But if a carrier without plans exists, it will be solved.
+					CarriersUtils.writeCarriers(scenario, UNSOLVED_CARRIER_FILE);
+					jspritOptimization = new JspritOptimization( nJspritIterations, this.carrierId2carrierAttributes, this.maxNumberOfLoopsForVRPSolving, this.linksPerZone, unhandledServicesSolution );
+					jspritOptimization.solveVRP(scenario );
 				}
 				default -> {
 					if (!Files.exists(shapeFileZonePath)) {
@@ -410,30 +494,35 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 					filterFacilitiesForZones(scenario);
 					prepareConfigForResultingModes(scenario);
 
-					switch (usedSmallScaleCommercialTrafficType) {
-						case commercialPersonTraffic, goodsTraffic -> createCarriersAndDemand(output, scenario,
-							usedSmallScaleCommercialTrafficType,
-							includeExistingModels, indexZones);
+					// ############################################
+					// ############################################
+					// here cometh the core command ("createCarriersAndDemand")
+					switch ( usedSmallScaleCommercialTrafficSegment ) {
+						case commercialPersonTraffic, goodsTraffic -> {
+							createCarriersAndDemand(output, scenario, usedSmallScaleCommercialTrafficSegment, includeExistingModels, indexZones );
+						}
 						case completeSmallScaleCommercialTraffic -> {
-							createCarriersAndDemand(output, scenario, SmallScaleCommercialTrafficType.commercialPersonTraffic,
-								includeExistingModels, indexZones);
-							createCarriersAndDemand(output, scenario, SmallScaleCommercialTrafficType.goodsTraffic,
-								false, indexZones);
+							createCarriersAndDemand(output, scenario, commercialPersonTraffic, includeExistingModels, indexZones);
+							createCarriersAndDemand(output, scenario, goodsTraffic, false, indexZones);
 						}
 						default -> throw new RuntimeException("No traffic type selected.");
 					}
+					// ############################################
+					// ############################################
 					CarriersUtils.writeCarriers(scenario, UNSOLVED_CARRIER_FILE);
 					if (createSmallScaleCommercialCarrierFileOnly) {
 						CarriersUtils.writeCarrierVehicleTypes(scenario, CARRIER_VEHICLE_TYPES_FILE);
 						log.info("Created small scale commercial carrier file without solution. Skipping jsprit and population generation.");
 						return 0;
 					}
+					// there are lines above which are similar but not the same
 					filterCarriersForSelectedPart(scenario);
 					if (isSolvingOnlyCarrierPart()) {
 						CarriersUtils.writeCarriers(scenario, UNSOLVED_CARRIER_FILE);
 					}
 					ensureJspritIterationsForCarriersToSolve(scenario);
-					solveVRP(scenario);
+					jspritOptimization = new JspritOptimization( nJspritIterations, this.carrierId2carrierAttributes, this.maxNumberOfLoopsForVRPSolving, this.linksPerZone, unhandledServicesSolution );
+					jspritOptimization.solveVRP(scenario );
 				}
 			}
 		}
@@ -449,82 +538,11 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 			return 0;
 		}
 		SmallScaleCommercialTrafficUtils.createPlansBasedOnCarrierPlans(scenario,
-			usedSmallScaleCommercialTrafficType, output, modelName, sampleName, nameOutputPopulation, numberOfPlanVariantsPerAgent);
+			usedSmallScaleCommercialTrafficSegment, output, modelName, sampleName, nameOutputPopulation, numberOfPlanVariantsPerAgent );
 
 		if (MATSimIterationsAfterDemandGeneration != null && MATSimIterationsAfterDemandGeneration >= 0) {
-			log.info("Running MATSim for {} iterations after demand generation.", MATSimIterationsAfterDemandGeneration);
-			Carriers carriers = CarriersUtils.addOrGetCarriers(scenario);
-			carriers.getCarriers().clear();
-
-			//this is necessary because integrated existing models can have additional vehicleTypes
-			CarriersUtils.getOrAddCarrierVehicleTypes(scenario).getVehicleTypes().values().forEach(vehicleType -> {
-				log.info("Adding vehicle type {} to scenario vehicles.", vehicleType.getId());
-				if (!scenario.getVehicles().getVehicleTypes().containsKey(vehicleType.getId()))
-					scenario.getVehicles().addVehicleType(vehicleType);
-			});
-			Set<String> activityTypes = new HashSet<>(
-				scenario.getPopulation().getPersons().values().stream()
-					.flatMap(person -> PopulationUtils.getActivities(person.getSelectedPlan(),
-						TripStructureUtils.StageActivityHandling.ExcludeStageActivities).stream())
-					.map(Activity::getType)
-					.toList()
-			);
-			for (String activityType : activityTypes) {
-				config.scoring().addActivityParams(new ScoringConfigGroup.ActivityParams(activityType).setTypicalDuration(30 * 60));
-			}
-			List<String> subpopulations = scenario.getPopulation().getPersons().values().stream()
-				.map(PopulationUtils::getSubpopulation)
-				.filter(Objects::nonNull)
-				.toList();
-
-			subpopulations.forEach(subpopulation -> {
-				config.replanning().addStrategySettings(
-					new ReplanningConfigGroup.StrategySettings().setStrategyName(DefaultPlanStrategiesModule.DefaultSelector.ChangeExpBeta).setWeight(
-						0.85).setSubpopulation(subpopulation));
-
-				config.replanning().addStrategySettings(
-					new ReplanningConfigGroup.StrategySettings().setStrategyName(DefaultPlanStrategiesModule.DefaultStrategy.ReRoute).setWeight(
-						0.1).setSubpopulation(subpopulation));
-			});
-
-			Set<String> modes = scenario.getVehicles().getVehicleTypes().values().stream()
-				.map(vehicleType -> vehicleType.getId().toString())
-				.distinct().collect(Collectors.toSet());
-
-			modes.forEach(mode -> {
-				ScoringConfigGroup.ModeParams thisModeParams = new ScoringConfigGroup.ModeParams(mode);
-				config.scoring().addModeParams(thisModeParams);
-			});
-
-			Set<String> qsimModes = new HashSet<>(config.qsim().getMainModes());
-			config.qsim().setMainModes(Sets.union(qsimModes, modes));
-
-			Set<String> networkModes = new HashSet<>(config.routing().getNetworkModes());
-			config.routing().setNetworkModes(Sets.union(networkModes, modes));
-
-			SimWrapper sw = SimWrapper.create();
-			sw.getConfigGroup().defaultParams().setShp(null);
-			sw.getConfigGroup().setDefaultDashboards(SimWrapperConfigGroup.DefaultDashboardsMode.disabled);
-			sw.getConfigGroup().setSampleSize(sample);
-			sw.addDashboard(new OverviewDashboard(modes));
-			sw.addDashboard(new CarrierDashboard("(*.)?output_carriers_withPlans.xml.gz"));
-			sw.addDashboard(new TripDashboard().setGroupsOfSubpopulationsForCommercialAnalysis("commercialPersonTraffic=commercialPersonTraffic,commercialPersonTraffic_service;smallScaleGoodsTraffic=goodsTraffic").setAnalysisArgs("--shp-filter", "none"));
-			sw.addDashboard(new CommercialTrafficDashboard(config.global().getCoordinateSystem()).setGroupsOfSubpopulationsForCommercialAnalysis("commercialPersonTraffic=commercialPersonTraffic,commercialPersonTraffic_service;smallScaleGoodsTraffic=goodsTraffic"));
-			sw.addDashboard(new TrafficDashboard(modes));
-			Controller controller = prepareController(scenario);
-
-			if (!RoadPricingUtils.addOrGetRoadPricingScheme(scenario).getTolledLinkIds().isEmpty()) {
-				controller.addOverridingModule(new RoadPricingModule(RoadPricingUtils.addOrGetRoadPricingScheme(scenario)));
-			}
-			controller.addOverridingModule(new SimWrapperModule(sw));
-
-			// Creating inject always adds check for unmaterialized config groups.
-			controller.getInjector();
-
-			// Removes check after injector has been created
-			controller.getConfig().removeConfigConsistencyChecker(UnmaterializedConfigGroupChecker.class);
-
-			controller.run();
+			matsimIterations = new MATSimIterations( MATSimIterationsAfterDemandGeneration, this.sample );
+			matsimIterations.runMATSimIterations( scenario, config, this );
 		}
 		return 0;
 	}
@@ -535,33 +553,34 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 	 * @param scenario complete Scenario
 	 */
 	private void filterFacilitiesForZones(Scenario scenario) {
-		Map<String, Map<StructuralAttribute, List<Pair<ActivityFacility, Double>>>> pairsPerZone = new HashMap<>();
+		Map<String, Map<ZoneAttribute, List<Pair<ActivityFacility, Double>>>> pairsPerZone = new HashMap<>();
 
 		scenario.getActivityFacilities().getFacilities().values().forEach(facility -> {
 			Object zoneObj = facility.getAttributes().getAttribute("zone");
-			if (!(zoneObj instanceof String zone) || zone.isBlank())
+			if (!(zoneObj instanceof String zone) || zone.isBlank()){
 				return;
-
+			}
 			Object wObj = facility.getAttributes().getAttribute("areaPerBuildingCategory");
-			if (!(wObj instanceof Number wNum))
+			if (!(wObj instanceof Number wNum)) {
 				throw new RuntimeException("The attribute 'areaPerBuildingCategory' is expected to be set for each facility and to be a number. Facility: " + facility.getId());
-
+			}
 			double weight = wNum.doubleValue();
 			if (!(weight > 0.0) || Double.isInfinite(weight))
 				return;
 
-			facility.getActivityOptions().values().forEach(opt -> {
-				String activityType = opt.getType();
+			facility.getActivityOptions().values().forEach(activityOption -> {
+				String activityType = activityOption.getType();
 				// if the structural attribute is an employee, add the facility to employee and the detailed element
-				if (activityType.contains(StructuralAttribute.EMPLOYEE.getLabel()))
-					pairsPerZone.computeIfAbsent(zone, z -> new HashMap<>()).computeIfAbsent(StructuralAttribute.EMPLOYEE, t -> new ArrayList<>()).add(
-						Pair.create(facility, weight));
-				pairsPerZone.computeIfAbsent(zone, z -> new HashMap<>()).computeIfAbsent(StructuralAttribute.fromLabel(activityType).get(), t -> new ArrayList<>()).add(
-					Pair.create(facility, weight));
+				if (activityType.contains( ZoneAttribute.EMPLOYEE.getLabel() )){
+					pairsPerZone.computeIfAbsent( zone, z -> new HashMap<>() ).computeIfAbsent( ZoneAttribute.EMPLOYEE,
+						t -> new ArrayList<>() ).add( Pair.create( facility, weight ) );
+				}
+				pairsPerZone.computeIfAbsent(zone, z -> new HashMap<>()).computeIfAbsent( ZoneAttribute.fromLabel(activityType ).get(), t -> new ArrayList<>() ).add(
+					Pair.create(facility, weight) );
 			});
 		});
 		pairsPerZone.forEach((zone, byType) -> {
-			Map<StructuralAttribute, EnumeratedDistribution<ActivityFacility>> distByType = facilitiesPerZoneWithProbabilities.computeIfAbsent(zone, z -> new HashMap<>());
+			Map<ZoneAttribute, EnumeratedDistribution<ActivityFacility>> distByType = facilitiesPerZoneWithProbabilities.computeIfAbsent(zone, z -> new HashMap<>() );
 
 			byType.forEach((activityType, pairs) -> {
 				if (!pairs.isEmpty()) {
@@ -641,11 +660,11 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 	 * @param scenario scenario containing the carriers that will be passed to jsprit
 	 */
 	private void ensureJspritIterationsForCarriersToSolve(Scenario scenario) {
-		if (jspritIterations <= 0) {
+		if ( nJspritIterations <= 0) {
 			return;
 		}
 		CarriersUtils.getCarriers(scenario).getCarriers().values()
-			.forEach(carrier -> CarriersUtils.setJspritIterations(carrier, jspritIterations));
+			.forEach(carrier -> CarriersUtils.setJspritIterations(carrier, nJspritIterations ) );
 	}
 
 	/**
@@ -708,191 +727,52 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 		log.info("Merged {} small scale commercial carrier parts into {}.", smallScaleCommercialCarrierPartCount, outputCarrierFile);
 	}
 
-	/**
-	 * Solves the generated carrier-plans and puts them into the Scenario.
-	 * If a carrier has unhandled services, a carrier-replanning loop deletes the old plans and generates new plans.
-	 * The new plans will then be solved and checked again.
-	 * This is repeated until the carrier-plans are solved or the {@code maxNumberOfLoopsForVRPSolving} are reached.
-	 * @param originalScenario complete Scenario
-	 */
-	private void solveVRP(Scenario originalScenario) throws Exception {
-
-		CarriersUtils.addRoadPricingForVRPToEnsureSolutionsBasedOnNetworkModes(originalScenario);
-
-
-		// comparison of results for hannover: increasing to maxServicesPerCarrier = 300 results in:
-		// computationTime *4; numberOfVehicles -2%; Jsprit score: -0,4%, drivenDistanc: -4,4%
-		// RE: result is to set this to maxServicesPerCarrier = 100;
-		boolean splitCarrier = true;
-		int maxServicesPerCarrier = 100;
-		Carriers carriers = CarriersUtils.addOrGetCarriers(originalScenario);
-		Map<Id<Carrier>, List<Id<Carrier>>> carrierId2subCarrierIds = new HashMap<>();
-
-		int splitCarriers = 0;
-
-		if (splitCarrier) {
-			Map<Id<Carrier>, Carrier> subCarriersToAdd = new HashMap<>();
-			List<Id<Carrier>> keyListCarrierToRemove = new ArrayList<>();
-			for (Carrier carrier : carriers.getCarriers().values()) {
-				if (CarriersUtils.getJspritIterations(carrier) == 0 || CarriersUtils.allJobsHandledBySelectedPlan(carrier))
-					continue;
-				int countedServices = 0;
-				int countedVehicles = 0;
-				if (carrier.getServices().size() > maxServicesPerCarrier) {
-					splitCarriers++;
-					int numberOfNewCarrier = (int) Math
-						.ceil((double) carrier.getServices().size() / (double) maxServicesPerCarrier);
-					int numberOfServicesPerNewCarrier = (int) Math
-						.floor((double) carrier.getServices().size() / numberOfNewCarrier);
-
-					int totalVehicles = carrier.getCarrierCapabilities().getCarrierVehicles().size();
-					int numberOfVehiclesPerNewCarrier = totalVehicles / numberOfNewCarrier;
-					int numberOfVehiclesRemainder = totalVehicles % numberOfNewCarrier;
-
-					List<Id<Vehicle>> vehiclesForNewCarrier = new ArrayList<>(
-						carrier.getCarrierCapabilities().getCarrierVehicles().keySet());
-					vehiclesForNewCarrier.sort(Comparator.comparing(Id::toString));
-					List<Id<CarrierService>> servicesForNewCarrier = new ArrayList<>(
-						carrier.getServices().keySet());
-					servicesForNewCarrier.sort(Comparator.comparing(Id::toString));
-
-					for (int j = 0; j < numberOfNewCarrier; j++) {
-
-						int numberOfServicesForNewCarrier = numberOfServicesPerNewCarrier;
-						if (j + 1 == numberOfNewCarrier)
-							numberOfServicesForNewCarrier = carrier.getServices().size() - countedServices;
-
-						int numberOfVehiclesForNewCarrier = numberOfVehiclesPerNewCarrier;
-						if (j < numberOfVehiclesRemainder)
-							numberOfVehiclesForNewCarrier++;
-
-						Carrier newCarrier = CarriersUtils.createCarrier(
-							Id.create(carrier.getId().toString() + "_part_" + (j + 1), Carrier.class));
-						CarrierCapabilities newCarrierCapabilities = CarrierCapabilities.Builder.newInstance()
-							.setFleetSize(carrier.getCarrierCapabilities().getFleetSize()).build();
-						newCarrierCapabilities.getVehicleTypes().addAll(carrier.getCarrierCapabilities().getVehicleTypes());
-						newCarrierCapabilities.getCarrierVehicles().putAll(carrier.getCarrierCapabilities().getCarrierVehicles());
-						newCarrier.setCarrierCapabilities(newCarrierCapabilities);
-						newCarrier.getServices().putAll(carrier.getServices());
-						CarriersUtils.setJspritIterations(newCarrier, CarriersUtils.getJspritIterations(carrier));
-						carrier.getAttributes().getAsMap().keySet().forEach(attribute -> newCarrier.getAttributes()
-							.putAttribute(attribute, carrier.getAttributes().getAttribute(attribute)));
-
-						carrierId2subCarrierIds.putIfAbsent(carrier.getId(), new LinkedList<>());
-						carrierId2subCarrierIds.get(carrier.getId()).add(newCarrier.getId());
-
-						int fromIndexVehicles = Math.min(countedVehicles, vehiclesForNewCarrier.size());
-						int fromIndexServices = Math.min(countedServices, servicesForNewCarrier.size());
-
-						int toIndexVehicles = fromIndexVehicles + numberOfVehiclesForNewCarrier;
-						int toIndexServices = fromIndexServices + numberOfServicesForNewCarrier;
-
-						// just to be sure that the index is not out of bounds
-						toIndexVehicles = Math.min(toIndexVehicles, vehiclesForNewCarrier.size());
-						toIndexServices = Math.min(toIndexServices, servicesForNewCarrier.size());
-
-						if (fromIndexVehicles == toIndexVehicles && fromIndexServices == toIndexServices) {
-							throw new IllegalStateException("No remaining vehicles/services but still splitting: " + carrier.getId());
-						}
-
-						List<Id<Vehicle>> subListVehicles = vehiclesForNewCarrier.subList(fromIndexVehicles, toIndexVehicles);
-						List<Id<CarrierService>> subListServices = servicesForNewCarrier.subList(fromIndexServices, toIndexServices);
-
-						newCarrier.getCarrierCapabilities().getCarrierVehicles().keySet()
-							.retainAll(subListVehicles);
-						newCarrier.getServices().keySet().retainAll(subListServices);
-
-						countedVehicles += newCarrier.getCarrierCapabilities().getCarrierVehicles().size();
-						countedServices += newCarrier.getServices().size();
-
-						subCarriersToAdd.put(newCarrier.getId(), newCarrier);
-					}
-					keyListCarrierToRemove.add(carrier.getId());
-					if (countedVehicles != carrier.getCarrierCapabilities().getCarrierVehicles().size())
-						throw new Exception("Split parts of the carrier " + carrier.getId().toString()
-							+ " has a different number of vehicles than the original carrier");
-					if (countedServices != carrier.getServices().size())
-						throw new Exception("Split parts of the carrier " + carrier.getId().toString()
-							+ " has a different number of services than the original carrier");
-
-				}
-			}
-			log.info("Splitting carriers: {}/{}, because the maximum number of services per carriers is set to {}.", splitCarriers, carriers.getCarriers().size(),
-				maxServicesPerCarrier);
-			// add created parts of new carriers and delete the old ones
-			carriers.getCarriers().putAll(subCarriersToAdd);
-			for (Id<Carrier> id : keyListCarrierToRemove) {
-				carriers.getCarriers().remove(id);
-			}
-			log.info("New number of carriers to solve: {}.", carriers.getCarriers().size());
-
-		}
-
-		// Map the values to the new subcarriers
-		for (Id<Carrier> oldCarrierId : carrierId2subCarrierIds.keySet()) {
-			for (Id<Carrier> newCarrierId : carrierId2subCarrierIds.get(oldCarrierId)) {
-				if (carrierId2carrierAttributes.putIfAbsent(newCarrierId, carrierId2carrierAttributes.get(oldCarrierId)) != null)
-					throw new Exception("CarrierAttributes already exist for the carrier " + newCarrierId.toString());
-			}
-		}
-
-		log.info("Start solving {} carriers. Carriers with 0 Jsprit iterations will be skipped and carriers with existing plans will be skipped.",
-			carriers.getCarriers().size());
-		CarriersUtils.runJsprit(originalScenario, CarriersUtils.CarrierSelectionForSolution.solveOnlyForCarrierWithoutPlans);
-		List<Carrier> nonCompleteSolvedCarriers = CarriersUtils.createListOfCarrierWithUnhandledJobs(CarriersUtils.getCarriers(originalScenario));
-		if (!nonCompleteSolvedCarriers.isEmpty() && maxNumberOfLoopsForVRPSolving > 0) {
-			CarriersUtils.writeCarriers(CarriersUtils.getCarriers(originalScenario),
-				originalScenario.getConfig().controller().getOutputDirectory() + "/" + originalScenario.getConfig().controller().getRunId() + ".output_carriers_notCompletelySolved.xml.gz");
-			unhandledServicesSolution.tryToSolveAllCarriersCompletely(originalScenario, nonCompleteSolvedCarriers);
-		}
-
-		CarriersUtils.getCarriers(originalScenario).getCarriers().values().forEach(carrier -> {
-			if (linksPerZone != null && !carrier.getAttributes().getAsMap().containsKey("tourStartArea")) {
-				List<String> startAreas = new ArrayList<>();
-				for (ScheduledTour tour : carrier.getSelectedPlan().getScheduledTours()) {
-					String tourStartZone = SmallScaleCommercialTrafficUtils
-						.findZoneOfLink(tour.getTour().getStartLinkId(), linksPerZone);
-					if (!startAreas.contains(tourStartZone))
-						startAreas.add(tourStartZone);
-				}
-				carrier.getAttributes().putAttribute("tourStartArea",
-					String.join(";", startAreas));
-			}
-		});
-	}
-
-	private void createCarriersAndDemand(Path output, Scenario scenario,
-										 SmallScaleCommercialTrafficType smallScaleCommercialTrafficType,
+	private void createCarriersAndDemand(Path outputPath, Scenario scenario,
+										 SmallScaleCommercialTrafficSegment smallScaleCommercialTrafficSegment,
 										 boolean includeExistingModels, Index indexZones) throws Exception {
 		ArrayList<String> modesORvehTypes;
-		if (smallScaleCommercialTrafficType.equals(SmallScaleCommercialTrafficType.goodsTraffic))
-			modesORvehTypes = new ArrayList<>(
-				Arrays.asList("vehTyp1", "vehTyp2", "vehTyp3", "vehTyp4", "vehTyp5"));
-		else if (smallScaleCommercialTrafficType.equals(SmallScaleCommercialTrafficType.commercialPersonTraffic))
-			modesORvehTypes = new ArrayList<>(List.of("total"));
-		else
-			throw new Exception("Invalid traffic type selected!");
+		if ( smallScaleCommercialTrafficSegment.equals( goodsTraffic )){
+			modesORvehTypes = new ArrayList<>( Arrays.asList( "vehTyp1", "vehTyp2", "vehTyp3", "vehTyp4", "vehTyp5" ) );
+		} else if ( smallScaleCommercialTrafficSegment.equals( commercialPersonTraffic )){
+			modesORvehTypes = new ArrayList<>( List.of( "total" ) );
+		} else{
+			throw new Exception( "Invalid traffic type selected!" );
+		}
+//		setInputParameters(smallScaleCommercialTrafficType);
+		// is now done in the TrafficVolumeGeneration constructor below
 
-		TrafficVolumeGeneration.setInputParameters(smallScaleCommercialTrafficType);
+		final TrafficVolumesGenerator trafficVolumesGenerator = new TrafficVolumesGenerator( smallScaleCommercialTrafficSegment );
 
-		Map<TrafficVolumeGeneration.TrafficVolumeKey, Object2DoubleMap<Integer>> trafficVolumePerTypeAndZone_start = TrafficVolumeGeneration
-			.createTrafficVolume_start(resultingDataPerZone, output, sample, modesORvehTypes, smallScaleCommercialTrafficType);
-		Map<TrafficVolumeGeneration.TrafficVolumeKey, Object2DoubleMap<Integer>> trafficVolumePerTypeAndZone_stop = TrafficVolumeGeneration
-			.createTrafficVolume_stop(resultingDataPerZone, output, sample, modesORvehTypes, smallScaleCommercialTrafficType);
+		Map<TrafficVolumeKey, Object2DoubleMap<Integer>> trafficVolumePerTypeAndZone_start = trafficVolumesGenerator.createTrafficVolumes(
+			attributesByZone, outputPath, sample, modesORvehTypes, smallScaleCommercialTrafficSegment, "start"
+		                                                                                                                                 );
+		Map<TrafficVolumeKey, Object2DoubleMap<Integer>> trafficVolumePerTypeAndZone_stop = trafficVolumesGenerator.createTrafficVolumes(
+			attributesByZone, outputPath, sample, modesORvehTypes, smallScaleCommercialTrafficSegment, "stop"
+		                                                                                                                                );
+		// at this point we have, per zone, the inbound and outbound volumes
 
 		if (includeExistingModels) {
+			// "models" are functions. Presumably, this means "include existing model results".
 			integrateExistingTrafficToSmallScaleCommercial.readExistingCarriersFromFolder(scenario, sample, indexZones);
-			integrateExistingTrafficToSmallScaleCommercial.reduceDemandBasedOnExistingCarriers(scenario, indexZones, smallScaleCommercialTrafficType,
+			integrateExistingTrafficToSmallScaleCommercial.reduceDemandBasedOnExistingCarriers(scenario, indexZones,
+				smallScaleCommercialTrafficSegment,
 				trafficVolumePerTypeAndZone_start, trafficVolumePerTypeAndZone_stop);
 		}
 
 		NetworkUtils.cleanNetwork(scenario.getNetwork(), scenario.getConfig().qsim().getMainModes());
-		if (linksPerZone == null)
-			linksPerZone = filterLinksForZones(scenario, this.indexZones, facilitiesPerZoneWithProbabilities, shapeFileZoneNameColumn);
+		if (linksPerZone == null){
+			linksPerZone = filterLinksForZones( scenario, this.indexZones, facilitiesPerZoneWithProbabilities, shapeFileZoneNameColumn );
+		}
 
-		odMatrix = createTripDistribution(trafficVolumePerTypeAndZone_start,
-			trafficVolumePerTypeAndZone_stop, smallScaleCommercialTrafficType, scenario, output);
-		createCarriers(scenario, smallScaleCommercialTrafficType);
+		odMatrix = createTripDistribution(trafficVolumePerTypeAndZone_start, trafficVolumePerTypeAndZone_stop, smallScaleCommercialTrafficSegment, scenario, outputPath );
+
+		// at this point, we have OD flows
+
+		createCarriers(scenario, smallScaleCommercialTrafficSegment );
+		// (This does, I think, go through all zones, and generate one carrier per zone to serve all of the outbound OD flows.)
+		// (yy I seem to remember that either the OD flows or the zonal freight volumes were rounded to integers; at this
+		// point, one wonders why that was needed; it would be sensible to have material for multiple destinations in one
+		// truck.)
 	}
 
 	/**
@@ -925,7 +805,7 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 		Config config = ConfigUtils.loadConfig(IOUtils.getFileUrl(configPath.toString()), configArgs);
 		if (output == null || output.toString().isEmpty())
 			config.controller().setOutputDirectory(Path.of(config.controller().getOutputDirectory()).resolve(modelName)
-				.resolve(usedSmallScaleCommercialTrafficType.toString() + "_" + sampleName + "pct" + "_"
+				.resolve( usedSmallScaleCommercialTrafficSegment.toString() + "_" + sampleName + "pct" + "_"
 					+ LocalDate.now() + "_" + LocalTime.now().toSecondOfDay() + "_" + resistanceFactorsPerModelType)
 				.toString());
 		else
@@ -981,35 +861,22 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 	}
 
 	/**
-	 * Prepares the controller.
-	 */
-	private Controller prepareController(Scenario scenario) {
-		Controller controller = ControllerUtils.createController(scenario);
-		// use overwriteExistingFiles because before setting up the OutputDirectoryHierarchy, the OverwriteFileSetting was failIfDirectoryExists
-		// in mean time some files were already written (e.g. carriers analysis), so we need to allow overwriting here
-		controller.getConfig().controller().setOverwriteFileSetting(OutputDirectoryHierarchy.OverwriteFileSetting.overwriteExistingFiles);
-
-		controller.getConfig().vspExperimental().setVspDefaultsCheckingLevel(VspExperimentalConfigGroup.VspDefaultsCheckingLevel.abort);
-		return controller;
-	}
-
-	/**
 	 * Creates the carriers and the related demand, based on the generated
 	 * TripDistributionMatrix.
 	 * @param scenario Scenario (loaded from your config), where the carriers will be put into
-	 * @param smallScaleCommercialTrafficType Selected traffic types. Options: commercialPersonTraffic, goodsTraffic
+	 * @param smallScaleCommercialTrafficSegment Selected traffic types. Options: commercialPersonTraffic, goodsTraffic
 	 */
-	public void createCarriers(Scenario scenario,
-							   SmallScaleCommercialTrafficType smallScaleCommercialTrafficType) {
+	private void createCarriers(Scenario scenario, SmallScaleCommercialTrafficSegment smallScaleCommercialTrafficSegment ) {
 
-		int maxNumberOfCarrier = odMatrix.getListOfPurposes().size() * odMatrix.getListOfZones().size()
-			* odMatrix.getListOfModesOrVehTypes().size();
-		int createdCarrier = 0;
+		int maxNumberOfCarriers = odMatrix.getListOfPurposes().size() * odMatrix.getListOfZones().size() * odMatrix.getListOfModesOrVehTypes().size();
+		int nCreatedCarriers = 0;
 		int fixedNumberOfVehiclePerTypeAndLocation = 1; //TODO possible improvement, perhaps check KiD
 
-		CarrierVehicleTypes carrierVehicleTypes = CarriersUtils.getOrAddCarrierVehicleTypes(scenario);
-		Map<Id<VehicleType>, VehicleType> additionalCarrierVehicleTypes = scenario.getVehicles().getVehicleTypes();
+		// carrier vehicle types:
 
+		CarrierVehicleTypes carrierVehicleTypes = CarriersUtils.getOrAddCarrierVehicleTypes(scenario);
+
+		Map<Id<VehicleType>, VehicleType> additionalCarrierVehicleTypes = scenario.getVehicles().getVehicleTypes();
 		// Only a vehicle with cost information will work properly
 		additionalCarrierVehicleTypes.values().stream()
 			.filter(vehicleType -> vehicleType.getCostInformation().getCostsPerSecond() != null)
@@ -1019,7 +886,11 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 			CostInformation costInformation = vehicleType.getCostInformation();
 			VehicleUtils.setCostsPerSecondInService(costInformation, costInformation.getCostsPerSecond());
 			VehicleUtils.setCostsPerSecondWaiting(costInformation, costInformation.getCostsPerSecond());
+			// (what is this???)
 		}
+
+		// carriers:
+
 		Carriers carriers = CarriersUtils.addOrGetCarriers(scenario);
 
 		for (Integer purpose : odMatrix.getListOfPurposes()) {
@@ -1028,12 +899,15 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 
 					// Check if this purpose, startZone, modeORvehType combination is a possiblr starting location (by looking if it has a trip-distribution-entry)
 					boolean isStartingLocation = false;
+
+					// careful, the following is a labeled break!!!
+					// (but is it really needed?  "break" ignores intermediate "if" and so either a simple "break" or a simple "continue" should do what we need.)
 					checkIfIsStartingPosition:
 					{
 						for (String possibleStopZone : odMatrix.getListOfZones()) {
 							if (!modeORvehType.equals("pt") && !modeORvehType.equals("op"))
 								if (odMatrix.getTripDistributionValue(startZone, possibleStopZone, modeORvehType,
-									purpose, smallScaleCommercialTrafficType) != 0) {
+									purpose, smallScaleCommercialTrafficSegment ) != 0) {
 									isStartingLocation = true;
 									break checkIfIsStartingPosition;
 								}
@@ -1042,7 +916,8 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 
 					if (isStartingLocation) {
 						// Get the vehicle-types and start/stop-categories
-						OdMatrixEntryInformationProvider.OdMatrixEntryInformation odMatrixEntry = odMatrixEntryInformationProvider.getOdMatrixEntryInformation(purpose, modeORvehType, smallScaleCommercialTrafficType);
+						OdMatrixEntryInformationProvider.OdMatrixEntryInformation odMatrixEntry = odMatrixEntryInformationProvider.getOdMatrixEntryInformation(purpose, modeORvehType,
+							smallScaleCommercialTrafficSegment );
 
 						// use only types of the possibleTypes which are in the given types file
 						List<String> vehicleTypes = new ArrayList<>();
@@ -1055,24 +930,24 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 						}
 						if (vehicleTypes.isEmpty())
 							throw new RuntimeException("The possible vehicle types found for purpose " + purpose + ", modeORvehType "
-								+ modeORvehType + ", smallScaleCommercialTrafficType " + smallScaleCommercialTrafficType +" do not exist in the given vehicle types file. PLease check your input file.");
-						StructuralAttribute selectedStartCategory = getSelectedStartCategory(startZone, odMatrixEntry);
+								+ modeORvehType + ", smallScaleCommercialTrafficType " + smallScaleCommercialTrafficSegment +" do not exist in the given vehicle types file. PLease check your input file.");
+						ZoneAttribute selectedStartCategory = getSelectedStartCategory(startZone, odMatrixEntry );
 
 						// Generate carrierName
 						String carrierName = null;
-						if (smallScaleCommercialTrafficType.equals(SmallScaleCommercialTrafficType.goodsTraffic)) {
+						if ( smallScaleCommercialTrafficSegment.equals( goodsTraffic )) {
 							carrierName = "Carrier_Goods_" + startZone + "_purpose_" + purpose + "_" + modeORvehType;
-						} else if (smallScaleCommercialTrafficType.equals(SmallScaleCommercialTrafficType.commercialPersonTraffic))
+						} else if ( smallScaleCommercialTrafficSegment.equals( commercialPersonTraffic ))
 							carrierName = "Carrier_Business_" + startZone + "_purpose_" + purpose;
 
 						// Create the Carrier
 						CarrierCapabilities.FleetSize fleetSize = CarrierCapabilities.FleetSize.FINITE;
 						ArrayList<String> vehicleDepots = new ArrayList<>();
-						createdCarrier++;
-						log.info("Create carrier number {} of a maximum Number of {} carriers.", createdCarrier, maxNumberOfCarrier);
+						nCreatedCarriers++;
+						log.info("Create carrier number {} of a maximum Number of {} carriers.", nCreatedCarriers, maxNumberOfCarriers);
 
 						CarrierAttributes carrierAttributes = new CarrierAttributes(purpose, startZone, selectedStartCategory, modeORvehType,
-							smallScaleCommercialTrafficType, vehicleDepots, odMatrixEntry);
+							smallScaleCommercialTrafficSegment, vehicleDepots, odMatrixEntry);
 						if(carrierId2carrierAttributes.putIfAbsent(Id.create(carrierName, Carrier.class), carrierAttributes) != null)
 							throw new RuntimeException("CarrierAttributes already exist for the carrier " + carrierName);
 
@@ -1090,8 +965,8 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 				}
 			}
 		}
-		log.warn("The jspritIterations are now set to {} in this simulation!", jspritIterations);
-		log.info("Finished creating {} carriers including related services.", createdCarrier);
+		log.warn("The jspritIterations are now set to {} in this simulation!", nJspritIterations );
+		log.info("Finished creating {} carriers including related services.", nCreatedCarriers);
 	}
 
 	/**
@@ -1101,12 +976,12 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 	 * @param odMatrixEntry odMatrixEntry
 	 * @return the selected start category
 	 */
-	protected StructuralAttribute getSelectedStartCategory(String startZone, OdMatrixEntryInformationProvider.OdMatrixEntryInformation odMatrixEntry) {
+	protected ZoneAttribute getSelectedStartCategory( String startZone, OdMatrixEntryInformationProvider.OdMatrixEntryInformation odMatrixEntry ) {
 		// Find a start category with existing employees in this zone
-		StructuralAttribute selectedStartCategory = odMatrixEntry.startCategoryDistribution.sample();
+		ZoneAttribute selectedStartCategory = odMatrixEntry.startCategoryDistribution.sample();
 		// we start with count = 1 because the first category is already selected, and if this category has employees, we can use it.
 		// Otherwise, we have to find another category.
-		for (int count = 1; resultingDataPerZone.get(startZone).getDouble(selectedStartCategory) == 0; count++) {
+		for ( int count = 1 ; attributesByZone.get(startZone ).getDouble(selectedStartCategory ) == 0; count++) {
 			if (count < 4)
 				selectedStartCategory = odMatrixEntry.startCategoryDistribution.sample();
 			else {
@@ -1115,9 +990,9 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 				// so that it is possible that we have traffic, although we have no employees in the given start category.
 				// That's why we exclude Inhabitants as a possible start category.
 				selectedStartCategory = odMatrixEntry.stopCategoryDistribution.sample();
-				if (selectedStartCategory.equals(StructuralAttribute.INHABITANTS))
+				if (selectedStartCategory.equals( ZoneAttribute.INHABITANTS ))
 					selectedStartCategory = odMatrixEntry.stopCategoryDistribution.sample();
-				if (resultingDataPerZone.get(startZone).getDouble(selectedStartCategory) > 0)
+				if ( attributesByZone.get(startZone ).getDouble(selectedStartCategory ) > 0)
 					log.warn(
 						"No possible start category with employees found for zone {}. Take a random category of the stop categories: {}. The possible start categories are: {}",
 						startZone, selectedStartCategory, odMatrixEntry.startCategoryDistribution.getPmf().toString());
@@ -1134,14 +1009,14 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 		int countedServices = 0;
 		for (String stopZone : odMatrix.getListOfZones()) {
 			int trafficVolumeForOD = Math.round((float)odMatrix.getTripDistributionValue(carrierAttributes.startZone,
-				stopZone, carrierAttributes.modeORvehType, carrierAttributes.purpose, carrierAttributes.smallScaleCommercialTrafficType));
+				stopZone, carrierAttributes.modeORvehType, carrierAttributes.purpose, carrierAttributes.smallScaleCommercialTrafficSegment ) );
 			int numberOfJobs = (int) Math.ceil(trafficVolumeForOD / carrierAttributes.odMatrixEntry.occupancyRate);
 			if (numberOfJobs == 0)
 				continue;
 			for (int i = 0; i < numberOfJobs; i++) {
 				// find a category for the tour stop with existing employees in this zone
-				StructuralAttribute selectedStopCategory = carrierAttributes.odMatrixEntry.stopCategoryDistribution.sample();
-				while (resultingDataPerZone.get(stopZone).getDouble(selectedStopCategory) == 0)
+				ZoneAttribute selectedStopCategory = carrierAttributes.odMatrixEntry.stopCategoryDistribution.sample();
+				while ( attributesByZone.get(stopZone ).getDouble(selectedStopCategory ) == 0)
 					selectedStopCategory = carrierAttributes.odMatrixEntry.stopCategoryDistribution.sample();
 				// additionalTravelBufferPerTourAndIterationInMinutes is only used while resolving carriers with unhandled services.
 				int serviceTimePerStop = getServiceTimePerStop(carrierAttributes);
@@ -1161,19 +1036,19 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 	Integer getServiceTimePerStop(CarrierAttributes carrierAttributes) {
 		ServiceDurationPerCategoryKey key;
 		// we use the start category for the service time selection because the start category represents the employees
-		if (carrierAttributes.smallScaleCommercialTrafficType().equals(SmallScaleCommercialTrafficType.commercialPersonTraffic)) {
+		if (carrierAttributes.smallScaleCommercialTrafficSegment().equals( commercialPersonTraffic )) {
 			if (carrierAttributes.odMatrixEntry().startCategoryDistribution.getPmf().stream()
 				.noneMatch(p -> p.getKey().equals(carrierAttributes.selectedStartCategory())))
-				key = GenerateSmallScaleCommercialTrafficDemand.makeServiceDurationPerCategoryKey(carrierAttributes.odMatrixEntry.startCategoryDistribution.sample(), null, carrierAttributes.smallScaleCommercialTrafficType());
+				key = GenerateSmallScaleCommercialTrafficDemand.makeServiceDurationPerCategoryKey(carrierAttributes.odMatrixEntry.startCategoryDistribution.sample(), null, carrierAttributes.smallScaleCommercialTrafficSegment() );
 			else
 				key = GenerateSmallScaleCommercialTrafficDemand.makeServiceDurationPerCategoryKey(carrierAttributes.selectedStartCategory, null,
-					carrierAttributes.smallScaleCommercialTrafficType());
+					carrierAttributes.smallScaleCommercialTrafficSegment() );
 		}
-		else if (carrierAttributes.smallScaleCommercialTrafficType().equals(SmallScaleCommercialTrafficType.goodsTraffic)) {
+		else if (carrierAttributes.smallScaleCommercialTrafficSegment().equals( goodsTraffic )) {
 			key = GenerateSmallScaleCommercialTrafficDemand.makeServiceDurationPerCategoryKey(carrierAttributes.selectedStartCategory(),
-				carrierAttributes.modeORvehType(), carrierAttributes.smallScaleCommercialTrafficType());
+				carrierAttributes.modeORvehType(), carrierAttributes.smallScaleCommercialTrafficSegment() );
 		} else {
-			throw new RuntimeException("Unknown traffic type: " + carrierAttributes.smallScaleCommercialTrafficType());
+			throw new RuntimeException("Unknown traffic type: " + carrierAttributes.smallScaleCommercialTrafficSegment());
 		}
 			DurationsBounds serviceDurationBounds = serviceDurationTimeSelector.get(key).sample();
 			int serviceDurationLowerBound = serviceDurationBounds.minDuration();
@@ -1184,8 +1059,8 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 	/**
 	 * Adds a service with the given attributes to the carrier.
 	 */
-	private void createService(Carrier newCarrier, ArrayList<String> noPossibleLinks, StructuralAttribute selectedStopCategory, String stopZone,
-							   Integer serviceTimePerStop, TimeWindow serviceTimeWindow, int i) {
+	private void createService( Carrier newCarrier, ArrayList<String> noPossibleLinks, ZoneAttribute selectedStopCategory, String stopZone,
+	                            Integer serviceTimePerStop, TimeWindow serviceTimeWindow, int i) {
 		Id<Link> linkId = findPossibleLink(stopZone, selectedStopCategory, noPossibleLinks);
 		Id<CarrierService> idNewService = Id.create(newCarrier.getId().toString() + "_" + linkId + "_" + (i + 1),
 			CarrierService.class);
@@ -1204,18 +1079,18 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 													List<String> vehicleTypes, CarrierCapabilities.FleetSize fleetSize,
 													int fixedNumberOfVehiclePerTypeAndLocation) {
 
-		if (carrierAttributes.smallScaleCommercialTrafficType.equals(SmallScaleCommercialTrafficType.commercialPersonTraffic) && carrierAttributes.purpose == 3)
-			thisCarrier.getAttributes().putAttribute("subpopulation", SubpopulationDefaultNames.SUBPOP_COM_PERSON_SERVICE);
-		else if (carrierAttributes.smallScaleCommercialTrafficType.equals(SmallScaleCommercialTrafficType.goodsTraffic) )
-			thisCarrier.getAttributes().putAttribute("subpopulation", SubpopulationDefaultNames.SUBPOP_GOODS);
+		if (carrierAttributes.smallScaleCommercialTrafficSegment.equals( commercialPersonTraffic ) && carrierAttributes.purpose == 3)
+			thisCarrier.getAttributes().putAttribute( SUBPOPULATION, SubpopulationDefaultNames.SUBPOP_COM_PERSON_SERVICE);
+		else if (carrierAttributes.smallScaleCommercialTrafficSegment.equals( goodsTraffic ) )
+			thisCarrier.getAttributes().putAttribute( SUBPOPULATION, SubpopulationDefaultNames.SUBPOP_GOODS);
 		else
-			thisCarrier.getAttributes().putAttribute("subpopulation", SubpopulationDefaultNames.SUBPOP_COM_PERSON);
+			thisCarrier.getAttributes().putAttribute( SUBPOPULATION, SubpopulationDefaultNames.SUBPOP_COM_PERSON);
 
-		thisCarrier.getAttributes().putAttribute("purpose", carrierAttributes.purpose);
-		thisCarrier.getAttributes().putAttribute("tourStartArea", carrierAttributes.startZone);
+		thisCarrier.getAttributes().putAttribute( PURPOSE, carrierAttributes.purpose);
+		thisCarrier.getAttributes().putAttribute( TOUR_START_AREA, carrierAttributes.startZone );
 		thisCarrier.getAttributes().putAttribute("startCategory", carrierAttributes.selectedStartCategory);
-		if (jspritIterations > 0)
-			CarriersUtils.setJspritIterations(thisCarrier, jspritIterations);
+		if ( nJspritIterations > 0)
+			CarriersUtils.setJspritIterations(thisCarrier, nJspritIterations );
 		CarrierCapabilities carrierCapabilities = CarrierCapabilities.Builder.newInstance().setFleetSize(fleetSize).build();
 
 		double sumServiceDurationsJobs = thisCarrier.getServices().values().stream().mapToDouble(CarrierService::getServiceDuration).sum() * factorForTravelBufferCalculation;
@@ -1223,8 +1098,8 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 		double sumMaxTourDurationsOfVehicles = 0;
 
 		while (sumMaxTourDurationsOfVehicles <= sumServiceDurationsJobs) {
-			TourStartAndDuration t = tourDistribution.get(carrierAttributes.smallScaleCommercialTrafficType).sample();
-			tourDistribution.get(carrierAttributes.smallScaleCommercialTrafficType).sample(2);
+			TourStartAndDuration t = tourDistribution.get(carrierAttributes.smallScaleCommercialTrafficSegment ).sample();
+			tourDistribution.get(carrierAttributes.smallScaleCommercialTrafficSegment ).sample(2 );
 			int vehicleStartTime = t.getVehicleStartTime(this.rnd);
 			int tourDuration = t.getVehicleTourDuration(this.rnd);
 			int vehicleEndTime = vehicleStartTime + tourDuration;
@@ -1250,7 +1125,7 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 	/**
 	 * Finds a possible link for a service or the vehicle location.
 	 */
-	Id<Link> findPossibleLink(String zone, StructuralAttribute selectedCategory, List<String> noPossibleLinks) {
+	Id<Link> findPossibleLink( String zone, ZoneAttribute selectedCategory, List<String> noPossibleLinks ) {
 		Id<Link> newLink = null;
 		for (int a = 0; newLink == null && a < facilitiesPerZoneWithProbabilities.get(zone).get(selectedCategory).getPmf().size() * 2; a++) {
 
@@ -1274,7 +1149,7 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 	 * Filters links by used modes and creates Map with all links in each zone
 	 */
 	static Map<String, Map<Id<Link>, Link>> filterLinksForZones(Scenario scenario, Index indexZones,
-																Map<String, Map<StructuralAttribute, EnumeratedDistribution<ActivityFacility>>> facilitiesPerZoneWithProbabilities,
+																Map<String, Map<ZoneAttribute, EnumeratedDistribution<ActivityFacility>>> facilitiesPerZoneWithProbabilities,
 																String shapeFileZoneNameColumn) {
 		Map<String, Map<Id<Link>, Link>> linksPerZone = new HashMap<>();
 		log.info("Filtering and assign links to zones. This take some time...");
@@ -1304,7 +1179,7 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 	 */
 	private static void findNearestLinkForZonesWithoutLinks(Network networkToChange, Map<String, Map<Id<Link>, Link>> linksPerZone,
 															Index shpZones,
-															Map<String, Map<StructuralAttribute, EnumeratedDistribution<ActivityFacility>>> facilitiesPerZoneWithProbabilities,
+															Map<String, Map<ZoneAttribute, EnumeratedDistribution<ActivityFacility>>> facilitiesPerZoneWithProbabilities,
 															String shapeFileZoneNameColumn) {
 		for (SimpleFeature singleArea : shpZones.getAllFeatures()) {
 			String zoneID = (String) singleArea.getAttribute(shapeFileZoneNameColumn);
@@ -1340,55 +1215,57 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 	 * Creates the number of trips between the zones for each mode and purpose.
 	 */
 	private TripDistributionMatrix createTripDistribution(
-		Map<TrafficVolumeGeneration.TrafficVolumeKey, Object2DoubleMap<Integer>> trafficVolume_start,
-		Map<TrafficVolumeGeneration.TrafficVolumeKey, Object2DoubleMap<Integer>> trafficVolume_stop,
-		SmallScaleCommercialTrafficType smallScaleCommercialTrafficType, Scenario scenario, Path output)
-		throws Exception {
-
+		Map<TrafficVolumeKey, Object2DoubleMap<Integer>> trafficVolume_start,
+		Map<TrafficVolumeKey, Object2DoubleMap<Integer>> trafficVolume_stop,
+		SmallScaleCommercialTrafficSegment smallScaleCommercialTrafficSegment, Scenario scenario, Path output )
+		throws Exception
+	{
 		ArrayList<String> listOfZones = new ArrayList<>();
 		trafficVolume_start.forEach((k, v) -> {
 			if (!listOfZones.contains(k.zone()))
 				listOfZones.add(k.zone());
 		});
 		final TripDistributionMatrix odMatrix = TripDistributionMatrix.Builder
-			.newInstance(indexZones, shapeFileZoneNameColumn, trafficVolume_start, trafficVolume_stop, smallScaleCommercialTrafficType, listOfZones).build();
+								.newInstance(indexZones, shapeFileZoneNameColumn, trafficVolume_start, trafficVolume_stop,
+				                                        smallScaleCommercialTrafficSegment, listOfZones ).build();
 		Network staticNetworkForODGeneration = readStaticNetworkForResistancePrecompute(scenario);
-		log.info("Create trip distribution for traffic type {} with resistance factor {}.", smallScaleCommercialTrafficType, resistanceFactorsPerModelType.get(smallScaleCommercialTrafficType).toString());
-		// Route all zone-pair resistance values on a static network before the OD loop so later matrix work only reads cached values.
-		odMatrix.precomputeResistanceFunctionValues(staticNetworkForODGeneration, linksPerZone, resistanceFactorsPerModelType.get(smallScaleCommercialTrafficType));
-		List<TrafficVolumeGeneration.TrafficVolumeKey> trafficVolumeKeys = new ArrayList<>(trafficVolume_start.keySet());
-		List<String> usedModesORvehTypes = trafficVolumeKeys.stream()
-			.map(TrafficVolumeGeneration.TrafficVolumeKey::modeORvehType).distinct().sorted().toList();
-		List<Integer> usedPurposes = trafficVolume_start.values().stream().flatMap(
-			purposeVolumes -> purposeVolumes.keySet().stream()).distinct().sorted().toList();
+		log.info("Create trip distribution for traffic type {} with resistance factor {}.", smallScaleCommercialTrafficSegment, resistanceFactorsPerModelType.get(
+			smallScaleCommercialTrafficSegment ).toString() );
 
-		Counter ODcounter = new Counter("OD destination slice # ",
-			" of " + usedModesORvehTypes.size() * usedPurposes.size() * listOfZones.size() + " processed.");
+		// Route all zone-pair resistance values on a static network before the OD loop so later matrix work only reads cached values:
+		odMatrix.precomputeResistanceFunctionValues(staticNetworkForODGeneration, linksPerZone, resistanceFactorsPerModelType.get( smallScaleCommercialTrafficSegment ) );
+
+		List<TrafficVolumeKey> trafficVolumeKeys = new ArrayList<>(trafficVolume_start.keySet());
+		List<String> usedModesORvehTypes = trafficVolumeKeys.stream().map( TrafficVolumeKey::modeORvehType ).distinct().sorted().toList();
+		List<Integer> usedPurposes = trafficVolume_start.values().stream().flatMap(purposeVolumes -> purposeVolumes.keySet().stream()).distinct().sorted().toList();
+
+		Counter ODcounter = new Counter("OD destination slice # ", " of " + usedModesORvehTypes.size() * usedPurposes.size() * listOfZones.size() + " processed.");
+
 		for (String modeORvehType : usedModesORvehTypes) {
-			List<TrafficVolumeGeneration.TrafficVolumeKey> startKeysForMode = trafficVolumeKeys.stream()
-				.filter(trafficVolumeKey -> trafficVolumeKey.modeORvehType().equals(modeORvehType))
-				.toList();
+			List<TrafficVolumeKey> startKeysForMode = trafficVolumeKeys.stream()
+			                                                           .filter(trafficVolumeKey -> trafficVolumeKey.modeORvehType().equals(modeORvehType))
+			                                                           .toList();
 			for (Integer purpose : usedPurposes) {
 				List<String> shuffledStopZones = new ArrayList<>(listOfZones);
 				Collections.shuffle(shuffledStopZones, rnd);
 				for (String stopZone : shuffledStopZones) {
-					List<TrafficVolumeGeneration.TrafficVolumeKey> shuffledStartKeys = new ArrayList<>(startKeysForMode);
+					List<TrafficVolumeKey> shuffledStartKeys = new ArrayList<>(startKeysForMode);
 					Collections.shuffle(shuffledStartKeys, rnd);
-					for (TrafficVolumeGeneration.TrafficVolumeKey trafficVolumeKey : shuffledStartKeys) {
-						odMatrix.setTripDistributionValue(trafficVolumeKey.zone(), stopZone, modeORvehType, purpose,
-							smallScaleCommercialTrafficType, staticNetworkForODGeneration, linksPerZone,
-							resistanceFactorsPerModelType.get(smallScaleCommercialTrafficType));
+					for ( TrafficVolumeKey trafficVolumeKey : shuffledStartKeys) {
+						odMatrix.calculateAndSetODFlow(trafficVolumeKey.zone(), stopZone, modeORvehType, purpose,
+							smallScaleCommercialTrafficSegment, staticNetworkForODGeneration, linksPerZone,
+							resistanceFactorsPerModelType.get( smallScaleCommercialTrafficSegment ) );
 					}
 					ODcounter.incCounter();
 				}
 			}
 		}
 		odMatrix.clearRoundingError(rnd);
-		odMatrix.writeODMatrices(output, smallScaleCommercialTrafficType);
+		odMatrix.writeODMatrices(output, smallScaleCommercialTrafficSegment );
 		return odMatrix;
 	}
 
-	public Map<SmallScaleCommercialTrafficType, EnumeratedDistribution<TourStartAndDuration>> getTourDistribution() {
+	public Map<SmallScaleCommercialTrafficSegment, EnumeratedDistribution<TourStartAndDuration>> getTourDistribution() {
 		return tourDistribution;
 	}
 
@@ -1410,10 +1287,10 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 	public double getFactorForTravelBufferCalculation(){
 		return factorForTravelBufferCalculation;
 	}
-	public record ServiceDurationPerCategoryKey(StructuralAttribute employeeCategory, String vehicleType, SmallScaleCommercialTrafficType smallScaleCommercialTrafficType) {}
+	public record ServiceDurationPerCategoryKey(ZoneAttribute employeeCategory, String vehicleType, SmallScaleCommercialTrafficSegment smallScaleCommercialTrafficSegment) {}
 
-	public static ServiceDurationPerCategoryKey makeServiceDurationPerCategoryKey(StructuralAttribute employeeCategory, String vehicleType, SmallScaleCommercialTrafficType smallScaleCommercialTrafficType) {
-		return new ServiceDurationPerCategoryKey(employeeCategory, vehicleType, smallScaleCommercialTrafficType);
+	public static ServiceDurationPerCategoryKey makeServiceDurationPerCategoryKey( ZoneAttribute employeeCategory, String vehicleType, SmallScaleCommercialTrafficSegment smallScaleCommercialTrafficSegment ) {
+		return new ServiceDurationPerCategoryKey(employeeCategory, vehicleType, smallScaleCommercialTrafficSegment );
 	}
 
 	public record TourStartAndDuration(int hourLower, int hourUpper, double minDuration, double maxDuration) {
@@ -1443,11 +1320,11 @@ public class GenerateSmallScaleCommercialTrafficDemand implements MATSimAppComma
 	 * @param startZone start zone of this carrier, entry from {@link TripDistributionMatrix#getListOfZones()}
 	 * @param selectedStartCategory start category of this carrier, selected randomly from
 	 * @param modeORvehType entry from {@link TripDistributionMatrix#getListOfModesOrVehTypes()}
-	 * @param smallScaleCommercialTrafficType Entry from {@link SmallScaleCommercialTrafficType} for this carrier
-	 *                                        <i>(NOTE: This value only differs between carriers if {@link SmallScaleCommercialTrafficType#completeSmallScaleCommercialTraffic is selected)</i>
+	 * @param smallScaleCommercialTrafficSegment Entry from {@link SmallScaleCommercialTrafficSegment} for this carrier
+	 *                                        <i>(NOTE: This value only differs between carriers if {@link SmallScaleCommercialTrafficSegment#completeSmallScaleCommercialTraffic is selected)</i>
 	 * @param vehicleDepots Containing the depots of this carrier with linkIds as strings
 	 */
-	public record CarrierAttributes(int purpose, String startZone, StructuralAttribute selectedStartCategory, String modeORvehType,
-									SmallScaleCommercialTrafficType smallScaleCommercialTrafficType, ArrayList<String> vehicleDepots,
-									OdMatrixEntryInformationProvider.OdMatrixEntryInformation odMatrixEntry) {}
+	public record CarrierAttributes(int purpose, String startZone, ZoneAttribute selectedStartCategory, String modeORvehType,
+	                                SmallScaleCommercialTrafficSegment smallScaleCommercialTrafficSegment, ArrayList<String> vehicleDepots,
+	                                OdMatrixEntryInformationProvider.OdMatrixEntryInformation odMatrixEntry) {}
 }
